tests/org.eclipse.php.core.tests/workspace/errors/php56/invalidUnpackArgumentOrder01.pdtt
--TEST--
Test invalid unpack argument order
--FILE--
<?php foo(...$lala, $plum) ?>
--EXPECT--
[line=1, start=20, end=25] Cannot use positional argument after argument unpacking